// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`codegen query without parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { type FieldDefinitions, type TypeOf, type VarOf } from "@gql-unicorn/runtime"
export type User = {
    __typename: "User"
    /**
     * User id
     */
    id: string
    name: string
}
export type __Query = {
    /**
     * Curent user
     */
    currentUser: User | null
}
type __TypeMap = {
    User: User
}
const __FieldDefs: FieldDefinitions = {
    "User": {},
    "Query": {
        "currentUser": "User"
    }
}
export const Query = __runtime.queryBuilder<__Query>(__FieldDefs)
export const Type = __runtime.typeBuilder<__TypeMap>(__FieldDefs)
export const Fragment = __runtime.fragmentBuilder<__TypeMap>(__FieldDefs)
export const $ = __runtime.$
export type { TypeOf, VarOf }"
`;

exports[`codegen query with parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { type Operation, type FieldDefinitions, type TypeOf, type VarOf } from "@gql-unicorn/runtime"
export type User = {
    __typename: "User"
    /**
     * User id
     */
    id: string
    name: string
}
export type __Query = {
    user: Operation<{ id: string }, User | null>
}
type __TypeMap = {
    User: User
}
const __FieldDefs: FieldDefinitions = {
    "User": {},
    "Query": {
        "user": [
            {
                "id": "ID!"
            },
            "User"
        ]
    }
}
export const Query = __runtime.queryBuilder<__Query>(__FieldDefs)
export const Type = __runtime.typeBuilder<__TypeMap>(__FieldDefs)
export const Fragment = __runtime.fragmentBuilder<__TypeMap>(__FieldDefs)
export const $ = __runtime.$
export type { TypeOf, VarOf }"
`;

exports[`codegen mutation without parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { type FieldDefinitions, type TypeOf, type VarOf } from "@gql-unicorn/runtime"
export type __Mutation = {
    someMutaionThing: string
}
const __FieldDefs: FieldDefinitions = {
    "Mutation": {}
}
export const Mutation = __runtime.mutationBuilder<__Mutation>(__FieldDefs)
export const $ = __runtime.$
export type { TypeOf, VarOf }"
`;

exports[`codegen mutation with parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { type Operation, type FieldDefinitions, type TypeOf, type VarOf } from "@gql-unicorn/runtime"
export type User = {
    __typename: "User"
    /**
     * User id
     */
    id: string
    name: string
}
export type __Query = {
    updateUser: Operation<{ id: string, name: string }, User | null>
}
type __TypeMap = {
    User: User
}
const __FieldDefs: FieldDefinitions = {
    "User": {},
    "Query": {
        "updateUser": [
            {
                "id": "ID!",
                "name": "String!"
            },
            "User"
        ]
    }
}
export const Query = __runtime.queryBuilder<__Query>(__FieldDefs)
export const Type = __runtime.typeBuilder<__TypeMap>(__FieldDefs)
export const Fragment = __runtime.fragmentBuilder<__TypeMap>(__FieldDefs)
export const $ = __runtime.$
export type { TypeOf, VarOf }"
`;

exports[`codegen subscription without parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { type FieldDefinitions, type TypeOf, type VarOf } from "@gql-unicorn/runtime"
export type __Subscription = {
    onChangeSomething: string
}
const __FieldDefs: FieldDefinitions = {
    "Subscription": {}
}
export const Subscription = __runtime.subscriptionBuilder<__Subscription>(__FieldDefs)
export const $ = __runtime.$
export type { TypeOf, VarOf }"
`;

exports[`codegen subscription with parameters 1`] = `
"/* eslint-disable */
/* prettier-ignore */
/* !!! GENERATED FILE DO NOT EDIT !!! */
import * as __runtime from "@gql-unicorn/runtime"
import { type Operation, type FieldDefinitions, type TypeOf, type VarOf } from "@gql-unicorn/runtime"
export type SomeEvent = {
    __typename: "SomeEvent"
    id: string
}
export type __Subscription = {
    onChangeSomething: Operation<{ type: string }, SomeEvent>
}
type __TypeMap = {
    SomeEvent: SomeEvent
}
const __FieldDefs: FieldDefinitions = {
    "SomeEvent": {},
    "Subscription": {
        "onChangeSomething": [
            {
                "type": "String!"
            },
            "SomeEvent"
        ]
    }
}
export const Subscription = __runtime.subscriptionBuilder<__Subscription>(__FieldDefs)
export const Type = __runtime.typeBuilder<__TypeMap>(__FieldDefs)
export const Fragment = __runtime.fragmentBuilder<__TypeMap>(__FieldDefs)
export const $ = __runtime.$
export type { TypeOf, VarOf }"
`;
